Filter works (on data attributes)
Also added quite some info in html product card elements

--- a/index.html
+++ b/index.html
@@ -132,6 +132,7 @@
           <div class="grid-container">
             <div
               class="product-card Keyboard"
+              data-category="Keyboard"
               data-color="Black,Blue"
               data-brand="Nuphy"
               data-price="299"
@@ -172,7 +173,7 @@
                   src="./images/welcome/kb-rk84.webp"
                   alt="Royal Kludge 84"
                 />
-                <h3 class="product-name">Royal Kludge RK84</h3>
+                <h3 class="product-name">Keyboard Nuphy Black,blue</h3>
                 <div class="product-price_icon">
                   <p class="price">$399</p>
                   <figure class="icons">
@@ -187,6 +188,7 @@
             </div>
             <div
               class="product-card Keyboard"
+              data-category="Keyboard"
               data-brand="Nuphy"
               data-color="Blue"
             >
@@ -226,7 +228,7 @@
                   src="./images/welcome/kb-rk84.webp"
                   alt="Royal Kludge 849"
                 />
-                <h3 class="product-name">Royal Kludge RK84</h3>
+                <h3 class="product-name">Keyboard Nuphy Blue</h3>
                 <div class="product-price_icon">
                   <p class="price">$399</p>
                   <figure class="icons">
@@ -242,6 +244,7 @@
 
             <div
               class="product-card Keyboard"
+              data-category="Keyboard"
               data-brand="Royal Kludge"
               data-color="Green"
             >
@@ -281,7 +284,7 @@
                   src="./images/welcome/kb-rk84.webp"
                   alt="Royal Kludge 84"
                 />
-                <h3 class="product-name">Royal Kludge RK84</h3>
+                <h3 class="product-name">Keyboard Royal Kludge Green</h3>
                 <div class="product-price_icon">
                   <p class="price">$399</p>
                   <figure class="icons">
@@ -295,7 +298,12 @@
               </section>
             </div>
 
-            <div class="product-card" data-color="">
+            <div
+              class="product-card"
+              data-color="Gold"
+              data-brand="Nuphy"
+              data-category="Keycaps"
+            >
               <div class="card-bg"></div>
               <div class="discount">%</div>
 
@@ -332,7 +340,7 @@
                   src="./images/welcome/kb-rk84.webp"
                   alt="Royal Kludge 84"
                 />
-                <h3 class="product-name">Royal Kludge RK84</h3>
+                <h3 class="product-name">Keycaps Nuphy Gold</h3>
                 <div class="product-price_icon">
                   <p class="price">$399</p>
                   <figure class="icons">
@@ -346,7 +354,12 @@
               </section>
             </div>
 
-            <div class="product-card" data-color="">
+            <div
+              class="product-card"
+              data-color="White,Blue,Black"
+              data-brand="Royal Kludge"
+              data-category="Switches"
+            >
               <div class="card-bg"></div>
               <div class="discount">%</div>
 
@@ -383,7 +396,7 @@
                   src="./images/welcome/kb-rk84.webp"
                   alt="Royal Kludge 84"
                 />
-                <h3 class="product-name">Royal Kludge RK84</h3>
+                <h3 class="product-name">Switches Kludge White, Blue,Black</h3>
                 <div class="product-price_icon">
                   <p class="price">$399</p>
                   <figure class="icons">
@@ -397,7 +410,12 @@
               </section>
             </div>
 
-            <div class="product-card" data-color="">
+            <div
+              class="product-card"
+              data-color="Pink,Blue"
+              data-brand="Nuphy"
+              data-category="Keycaps"
+            >
               <div class="card-bg"></div>
               <div class="discount">%</div>
 
@@ -434,7 +452,7 @@
                   src="./images/welcome/kb-rk84.webp"
                   alt="Royal Kludge 84"
                 />
-                <h3 class="product-name">Royal Kludge RK84</h3>
+                <h3 class="product-name">Keycaps nuphy pink,blue</h3>
                 <div class="product-price_icon">
                   <p class="price">$399</p>
                   <figure class="icons">
@@ -448,7 +466,12 @@
               </section>
             </div>
 
-            <div class="product-card" data-color="">
+            <div
+              class="product-card"
+              data-color="Gold,Silver"
+              data-brand="Nuphy"
+              data-category="Keyboard"
+            >
               <div class="card-bg"></div>
               <div class="discount">%</div>
 
@@ -485,7 +508,7 @@
                   src="./images/welcome/kb-rk84.webp"
                   alt="Royal Kludge 84"
                 />
-                <h3 class="product-name">Royal Kludge RK84</h3>
+                <h3 class="product-name">Keyboard Nuphy Gold,Silver</h3>
                 <div class="product-price_icon">
                   <p class="price">$399</p>
                   <figure class="icons">
@@ -499,7 +522,12 @@
               </section>
             </div>
 
-            <div class="product-card" data-color="">
+            <div
+              class="product-card"
+              data-color="Red"
+              data-brand="Nuphy"
+              data-category="Switches"
+            >
               <div class="card-bg"></div>
               <div class="discount">%</div>
 
@@ -536,7 +564,7 @@
                   src="./images/welcome/kb-rk84.webp"
                   alt="Royal Kludge 84"
                 />
-                <h3 class="product-name">Royal Kludge RK84</h3>
+                <h3 class="product-name">Switches Nuphy red</h3>
                 <div class="product-price_icon">
                   <p class="price">$399</p>
                   <figure class="icons">
@@ -550,7 +578,12 @@
               </section>
             </div>
 
-            <div class="product-card" data-color="">
+            <div
+              class="product-card"
+              data-color="Red,Orange"
+              data-category="Switches"
+              data-brand="Royal Kludge"
+            >
               <div class="card-bg"></div>
               <div class="discount">%</div>
 
@@ -587,7 +620,7 @@
                   src="./images/welcome/kb-rk84.webp"
                   alt="Royal Kludge 84"
                 />
-                <h3 class="product-name">Royal Kludge RK84</h3>
+                <h3 class="product-name">Switchs Royal Kludge red,orange</h3>
                 <div class="product-price_icon">
                   <p class="price">$399</p>
                   <figure class="icons">
