--- a/index.html
+++ b/index.html
@@ -44,8 +44,6 @@
       <header>
         <div class="nav-container">
           <h2 class="logo">KEYKAPS</h2>
-          <button class="test-btn-filter">BIG ASS filter BUTTON</button>
-          <button class="test-btn-sort">BIG ASS sort BUTTON</button>
 
           <nav class="main-nav">
             <ul class="nav__list">
@@ -122,7 +120,7 @@
         <section class="products">
           <div class="products__filter">
             <ul class="filter__list">
-              <li class="active-filter filter__item" data-filter="all">ALL</li>
+              <li class="active-filter filter__item" data-filter="">ALL</li>
               <li class="filter__item" data-filter="Keyboard">KEYBOARDS</li>
               <li class="filter__item" data-filter="Keycaps">KEYCAPS</li>
               <li class="filter__item" data-filter="Switches">SWITCHES</li>
