--- a/test/index.html
+++ b/test/index.html
@@ -153,7 +153,7 @@
             </div>
           </div>
         </div>
-        <!-- The image section -->
+        <!-- The image section 1-->
         <div class="img-wrap wrapper">
           <h2>Images</h2>
           <div class="images wrap2">
@@ -167,7 +167,6 @@
             <button
               class="add-img"
               id="add-img2"
-              style="display: inline-block"
               onclick="document.getElementById('img-container-2').style.display = 'block'; this.style.display = 'none';"
             >
               Add Image
@@ -178,7 +177,6 @@
             <button
               class="add-img"
               id="add-img3"
-              style="display: none"
               onclick="document.getElementById('img-container-3').style.display = 'block'; this.style.display = 'none';"
             >
               Add Image
@@ -189,7 +187,6 @@
             <button
               class="add-img"
               id="add-img4"
-              style="display: none"
               onclick="document.getElementById('img-container-4').style.display = 'block'; this.style.display = 'none';"
             >
               Add Image
@@ -200,16 +197,22 @@
             <button
               class="add-img"
               id="add-img5"
-              style="display: none"
               onclick="document.getElementById('img-container-5').style.display = 'block'; this.style.display = 'none';"
             >
               Add Image
             </button>
           </div>
+          <button
+            type="button"
+            id="add-image-button"
+            onclick="document.getElementById('optional-imgs').style.display = 'block'; this.style.display = 'none';"
+          >
+            Add Image
+          </button>
         </div>
         <!-- Image section 2 / with JS -->
         <div class="img-wrap wrapper">
-          <div id="required-img">
+          <div class="images wrap2" id="required-img">
             <label for="img1">Image 1:</label><br />
             <input type="file" id="img1" name="img1" accept="img/*" required />
           </div>
