fixed id/name issues subfilters

--- a/index.html
+++ b/index.html
@@ -90,19 +90,19 @@
               <div class="subfilter__selection hidden">
                 <div class="subfilter__row">
                   <label for="Black">Black</label>
-                  <input class="color-checkbox" type="checkbox" id="Black" />
+                  <input class="color-checkbox" type="checkbox" id="1" />
                 </div>
                 <div class="subfilter__row">
                   <label for="Blue">Blue</label>
-                  <input class="color-checkbox" type="checkbox" id="Blue" />
+                  <input class="color-checkbox" type="checkbox" id="4" />
                 </div>
                 <div class="subfilter__row">
                   <label for="Red">Red</label>
-                  <input class="color-checkbox" type="checkbox" id="Red" />
+                  <input class="color-checkbox" type="checkbox" id="8" />
                 </div>
                 <div class="subfilter__row">
                   <label for="Gold">Gold</label>
-                  <input class="color-checkbox" type="checkbox" id="Gold" />
+                  <input class="color-checkbox" type="checkbox" id="11" />
                 </div>
               </div>
             </div>
@@ -111,15 +111,11 @@
               <div class="subfilter__selection hidden">
                 <div class="subfilter__row">
                   <label for="Nuphy">Nuphy</label>
-                  <input class="brand-checkbox" type="checkbox" id="Nuphy" />
+                  <input class="brand-checkbox" type="checkbox" id="2" />
                 </div>
                 <div class="subfilter__row">
                   <label for="Royal Kludge">Royal Kludge</label>
-                  <input
-                    class="brand-checkbox"
-                    type="checkbox"
-                    id="Royal-Kludge"
-                  />
+                  <input class="brand-checkbox" type="checkbox" id="1" />
                 </div>
               </div>
             </div>
@@ -138,8 +134,8 @@
             <div
               class="product-card Keyboard"
               data-category="Keyboard"
-              data-color="Black,Blue"
-              data-brand="Nuphy"
+              data-color="1,4"
+              data-brand="2"
               data-price="299"
             >
               <div class="card-bg"></div>
@@ -194,8 +190,8 @@
             <div
               class="product-card Keyboard"
               data-category="Keyboard"
-              data-brand="Nuphy"
-              data-color="Blue"
+              data-brand="2"
+              data-color="4"
             >
               <div class="card-bg"></div>
               <div class="discount">%</div>
@@ -250,8 +246,8 @@
             <div
               class="product-card Keyboard"
               data-category="Keyboard"
-              data-brand="Royal Kludge"
-              data-color="Green"
+              data-brand="1"
+              data-color="5"
             >
               <div class="card-bg"></div>
               <div class="discount">%</div>
@@ -305,8 +301,8 @@
 
             <div
               class="product-card"
-              data-color="Gold"
-              data-brand="Nuphy"
+              data-color="11"
+              data-brand="2"
               data-category="Keycaps"
             >
               <div class="card-bg"></div>
@@ -361,8 +357,8 @@
 
             <div
               class="product-card"
-              data-color="White,Blue,Black"
-              data-brand="Royal Kludge"
+              data-color="3,4,1"
+              data-brand="1"
               data-category="Switches"
             >
               <div class="card-bg"></div>
@@ -417,8 +413,8 @@
 
             <div
               class="product-card"
-              data-color="Pink,Blue"
-              data-brand="Nuphy"
+              data-color="9,4"
+              data-brand="2"
               data-category="Keycaps"
             >
               <div class="card-bg"></div>
@@ -473,8 +469,8 @@
 
             <div
               class="product-card"
-              data-color="Gold,Silver"
-              data-brand="Nuphy"
+              data-color="11,12"
+              data-brand="2"
               data-category="Keyboard"
             >
               <div class="card-bg"></div>
@@ -529,8 +525,8 @@
 
             <div
               class="product-card"
-              data-color="Red"
-              data-brand="Nuphy"
+              data-color="8"
+              data-brand="2"
               data-category="Switches"
             >
               <div class="card-bg"></div>
@@ -585,9 +581,9 @@
 
             <div
               class="product-card"
-              data-color="Red,Orange"
+              data-color="8,7"
               data-category="Switches"
-              data-brand="Royal Kludge"
+              data-brand="1"
             >
               <div class="card-bg"></div>
               <div class="discount">%</div>
