--- a/index.html
+++ b/index.html
@@ -44,8 +44,14 @@
       </div>
       <header id="header">
         <div class="nav-container">
-          <h2 class="logo">KEYKAPS</h2>
-
+          <div class="logo-container">
+            <img
+              class="logo-art"
+              src="images/welcome/keykaps-logo.jpg"
+              alt=""
+            />
+            <h2 class="logo">KEYKAPS</h2>
+          </div>
           <nav class="main-nav">
             <ul class="nav__list">
               <li class="full-nav">
@@ -68,12 +74,17 @@
       </header>
       <div class="main-container">
         <section class="welcome-container">
-          <div class="welcome__text welcome__right">
+          <div class="welcome__text">
             <div class="text-container">
               <p class="title title1">Anything For</p>
               <p class="title title2">Mechanical Keyboards</p>
             </div>
           </div>
+          <img
+            class="welcome__image"
+            src="images/welcome/keykapsWelcome.jpg"
+            alt=""
+          />
         </section>
         <section class="products">
           <div class="products__filter">
