First styling of filter selection

--- a/index.html
+++ b/index.html
@@ -99,28 +99,57 @@
           </div>
           <div class="subfilter">
             <div class="subfilter__section subfilter__colors-section">
-              <button class="subfilter-btn subfilter-btn-colors">Colors</button>
-              <div class="subfilter__selection hidden">
-                <div class="subfilter__row">
-                  <label for="Black">Black</label>
-                  <input class="color-checkbox" type="checkbox" id="1" />
+              <button
+                class="general-subfilter-btn subfilter-btn subfilter-btn-colors"
+              >
+                Colors
+              </button>
+              <div class="subfilter__selection">
+                <div class="subfilter__clear">
+                  <span>Clear</span>
                 </div>
-                <div class="subfilter__row">
-                  <label for="Blue">Blue</label>
-                  <input class="color-checkbox" type="checkbox" id="4" />
-                </div>
-                <div class="subfilter__row">
-                  <label for="Red">Red</label>
-                  <input class="color-checkbox" type="checkbox" id="8" />
-                </div>
-                <div class="subfilter__row">
-                  <label for="Gold">Gold</label>
-                  <input class="color-checkbox" type="checkbox" id="11" />
+                <div class="subfilter__row-container">
+                  <div class="subfilter__row">
+                    <input class="color-checkbox" type="checkbox" id="1" />
+                    <label for="Black">Black</label>
+                  </div>
+                  <div class="subfilter__row">
+                    <input class="color-checkbox" type="checkbox" id="4" />
+                    <label for="Blue">Blue</label>
+                  </div>
+                  <div class="subfilter__row">
+                    <input class="color-checkbox" type="checkbox" id="8" />
+                    <label for="Red">Red</label>
+                  </div>
+                  <div class="subfilter__row">
+                    <input class="color-checkbox" type="checkbox" id="11" />
+                    <label for="Gold">Gold</label>
+                  </div>
+                  <div class="subfilter__row">
+                    <input class="color-checkbox" type="checkbox" id="11" />
+                    <label for="Gold">Pink</label>
+                  </div>
+                  <div class="subfilter__row">
+                    <input class="color-checkbox" type="checkbox" id="11" />
+                    <label for="Gold">Green</label>
+                  </div>
+                  <div class="subfilter__row">
+                    <input class="color-checkbox" type="checkbox" id="11" />
+                    <label for="Gold">Yellow</label>
+                  </div>
+                  <div class="subfilter__row">
+                    <input class="color-checkbox" type="checkbox" id="11" />
+                    <label for="Gold">Orange</label>
+                  </div>
+                  <div class="subfilter__row">
+                    <input class="color-checkbox" type="checkbox" id="11" />
+                    <label for="Gold">Purple</label>
+                  </div>
                 </div>
               </div>
             </div>
             <div class="subfilter__section brands-section">
-              <button class="subfilter-btn">Brand</button>
+              <button class="general-subfilter-btn subfilter-btn">Brand</button>
               <div class="subfilter__selection hidden">
                 <div class="subfilter__row">
                   <label for="Nuphy">Nuphy</label>
@@ -132,13 +161,13 @@
                 </div>
               </div>
             </div>
-            <!-- <div class="subfilter__section">
-              <button class="subfilter-btn">Price</button>
-              <div class="subfilter__selection"></div>
-            </div> -->
 
-            <button class="subfilter-btn-go">Filter</button>
-            <button class="subfilter-btn-clear">Clear all filters</button>
+            <button class="general-subfilter-btn subfilter-btn-go">
+              Filter
+            </button>
+            <button class="general-subfilter-btn subfilter-btn-clear">
+              Clear All
+            </button>
 
             <div class="subfilter__section subfilter__colors"></div>
           </div>
