Pseudo Code on SubFilter js class

--- a/index.html
+++ b/index.html
@@ -97,81 +97,85 @@
               </ul>
             </div>
           </div>
-          <div class="subfilter">
-            <div class="subfilter__section subfilter__colors-section">
-              <button
-                class="general-subfilter-btn subfilter-btn subfilter-btn-colors"
-              >
-                Colors
+          <div class="subfilter-container">
+            <div class="subfilter">
+              <div class="subfilter__section subfilter__colors-section">
+                <button
+                  class="general-subfilter-btn subfilter-btn subfilter-btn-colors"
+                >
+                  Colors
+                </button>
+                <div class="subfilter__selection">
+                  <div class="subfilter__clear">
+                    <span>Clear</span>
+                  </div>
+                  <div class="subfilter__row-container">
+                    <div class="subfilter__row">
+                      <input class="color-checkbox" type="checkbox" id="1" />
+                      <label for="Black">Black</label>
+                    </div>
+                    <div class="subfilter__row">
+                      <input class="color-checkbox" type="checkbox" id="4" />
+                      <label for="Blue">Blue</label>
+                    </div>
+                    <div class="subfilter__row">
+                      <input class="color-checkbox" type="checkbox" id="8" />
+                      <label for="Red">Red</label>
+                    </div>
+                    <div class="subfilter__row">
+                      <input class="color-checkbox" type="checkbox" id="11" />
+                      <label for="Gold">Gold</label>
+                    </div>
+                    <div class="subfilter__row">
+                      <input class="color-checkbox" type="checkbox" id="11" />
+                      <label for="Gold">Pink</label>
+                    </div>
+                    <div class="subfilter__row">
+                      <input class="color-checkbox" type="checkbox" id="11" />
+                      <label for="Gold">Green</label>
+                    </div>
+                    <div class="subfilter__row">
+                      <input class="color-checkbox" type="checkbox" id="11" />
+                      <label for="Gold">Yellow</label>
+                    </div>
+                    <div class="subfilter__row">
+                      <input class="color-checkbox" type="checkbox" id="11" />
+                      <label for="Gold">Orange</label>
+                    </div>
+                    <div class="subfilter__row">
+                      <input class="color-checkbox" type="checkbox" id="11" />
+                      <label for="Gold">Purple</label>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="subfilter__section brands-section">
+                <button class="general-subfilter-btn subfilter-btn">
+                  Brand
+                </button>
+                <div class="subfilter__selection hidden">
+                  <div class="subfilter__row">
+                    <label for="Nuphy">Nuphy</label>
+                    <input class="brand-checkbox" type="checkbox" id="2" />
+                  </div>
+                  <div class="subfilter__row">
+                    <label for="Royal Kludge">Royal Kludge</label>
+                    <input class="brand-checkbox" type="checkbox" id="1" />
+                  </div>
+                </div>
+              </div>
+              <button class="general-subfilter-btn subfilter-btn-go">
+                Filter
               </button>
-              <div class="subfilter__selection">
-                <div class="subfilter__clear">
-                  <span>Clear</span>
-                </div>
-                <div class="subfilter__row-container">
-                  <div class="subfilter__row">
-                    <input class="color-checkbox" type="checkbox" id="1" />
-                    <label for="Black">Black</label>
-                  </div>
-                  <div class="subfilter__row">
-                    <input class="color-checkbox" type="checkbox" id="4" />
-                    <label for="Blue">Blue</label>
-                  </div>
-                  <div class="subfilter__row">
-                    <input class="color-checkbox" type="checkbox" id="8" />
-                    <label for="Red">Red</label>
-                  </div>
-                  <div class="subfilter__row">
-                    <input class="color-checkbox" type="checkbox" id="11" />
-                    <label for="Gold">Gold</label>
-                  </div>
-                  <div class="subfilter__row">
-                    <input class="color-checkbox" type="checkbox" id="11" />
-                    <label for="Gold">Pink</label>
-                  </div>
-                  <div class="subfilter__row">
-                    <input class="color-checkbox" type="checkbox" id="11" />
-                    <label for="Gold">Green</label>
-                  </div>
-                  <div class="subfilter__row">
-                    <input class="color-checkbox" type="checkbox" id="11" />
-                    <label for="Gold">Yellow</label>
-                  </div>
-                  <div class="subfilter__row">
-                    <input class="color-checkbox" type="checkbox" id="11" />
-                    <label for="Gold">Orange</label>
-                  </div>
-                  <div class="subfilter__row">
-                    <input class="color-checkbox" type="checkbox" id="11" />
-                    <label for="Gold">Purple</label>
-                  </div>
-                </div>
-              </div>
             </div>
-            <div class="subfilter__section brands-section">
-              <button class="general-subfilter-btn subfilter-btn">Brand</button>
-              <div class="subfilter__selection hidden">
-                <div class="subfilter__row">
-                  <label for="Nuphy">Nuphy</label>
-                  <input class="brand-checkbox" type="checkbox" id="2" />
-                </div>
-                <div class="subfilter__row">
-                  <label for="Royal Kludge">Royal Kludge</label>
-                  <input class="brand-checkbox" type="checkbox" id="1" />
-                </div>
-              </div>
+            <div class="subfilter-active">
+              <button class="hidden general-subfilter-btn subfilter-btn-clear">
+                Clear All
+              </button>
+              <button class="">test</button>
+              <button class="">test2</button>
             </div>
-
-            <button class="general-subfilter-btn subfilter-btn-go">
-              Filter
-            </button>
-            <button class="general-subfilter-btn subfilter-btn-clear">
-              Clear All
-            </button>
-
-            <div class="subfilter__section subfilter__colors"></div>
           </div>
-
           <div class="grid-container">
             <div
               class="product-card Keyboard"
