Changed globalFilter to static

--- a/index.html
+++ b/index.html
@@ -112,39 +112,39 @@
                   <div class="subfilter__row-container">
                     <div class="subfilter__row">
                       <input class="color-checkbox" type="checkbox" id="1" />
-                      <label for="Black">Black</label>
+                      <label for="1">Black</label>
                     </div>
                     <div class="subfilter__row">
                       <input class="color-checkbox" type="checkbox" id="4" />
-                      <label for="Blue">Blue</label>
+                      <label for="4">Blue</label>
                     </div>
                     <div class="subfilter__row">
                       <input class="color-checkbox" type="checkbox" id="8" />
-                      <label for="Red">Red</label>
+                      <label for="8">Red</label>
                     </div>
                     <div class="subfilter__row">
                       <input class="color-checkbox" type="checkbox" id="11" />
-                      <label for="Gold">Gold</label>
+                      <label for="11">Gold</label>
                     </div>
                     <div class="subfilter__row">
-                      <input class="color-checkbox" type="checkbox" id="11" />
-                      <label for="Gold">Pink</label>
+                      <input class="color-checkbox" type="checkbox" id="12" />
+                      <label for="12">Pink</label>
                     </div>
                     <div class="subfilter__row">
-                      <input class="color-checkbox" type="checkbox" id="11" />
-                      <label for="Gold">Green</label>
+                      <input class="color-checkbox" type="checkbox" id="13" />
+                      <label for="13">Green</label>
                     </div>
                     <div class="subfilter__row">
-                      <input class="color-checkbox" type="checkbox" id="11" />
-                      <label for="Gold">Yellow</label>
+                      <input class="color-checkbox" type="checkbox" id="14" />
+                      <label for="14">Yellow</label>
                     </div>
                     <div class="subfilter__row">
-                      <input class="color-checkbox" type="checkbox" id="11" />
-                      <label for="Gold">Orange</label>
+                      <input class="color-checkbox" type="checkbox" id="15" />
+                      <label for="15">Orange</label>
                     </div>
                     <div class="subfilter__row">
-                      <input class="color-checkbox" type="checkbox" id="11" />
-                      <label for="Gold">Purple</label>
+                      <input class="color-checkbox" type="checkbox" id="16" />
+                      <label for="16">Purple</label>
                     </div>
                   </div>
                 </div>
