Some pseudo code on subfilter and first go at generating btns

--- a/index.html
+++ b/index.html
@@ -172,8 +172,7 @@
               <button class="hidden general-subfilter-btn subfilter-btn-clear">
                 Clear All
               </button>
-              <button class="">test</button>
-              <button class="">test2</button>
+              <button class="testBTN">test</button>
             </div>
           </div>
           <div class="grid-container">
